--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.18.0
   vibration: ^3.1.3
+  audioplayers: ^6.0.0
+  lottie: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/fonts/
+    - assets/sounds/
+    - assets/lottie/
 
   fonts:
     - family: Rounded Mplus 1c
